ecmascript/parser/tests/typescript-errors/decorators/type-arguments-invalid/input.ts.stderr
error: Expected (, got Some(class)
 --> $DIR/tests/typescript-errors/decorators/type-arguments-invalid/input.ts:2:1
  |
2 | class Test {}
  | ^^^^^

